--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
         "Zone": true,
         "describe": true,
         "it": true,
-        "afterEach": true
+        "afterEach": true,
+        "after": true,
+        "before": true
     }
 }
