--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "global-request-context",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha -r ./test-setup lib/*.test.js",
@@ -20,12 +20,14 @@
     "mocha": "^4.0.0",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
-    "global-request-context": "file:."
-  },
-  "dependencies": {
     "zone.js": "^0.8.18"
   },
-  "description": "A middleware that enables to require request context as if it was global.",
+  "peerDependencies": {
+    "zone.js": "^0.8.18",
+    "express": "^4.16.2",
+    "koa": "^2.3.0"
+  },
+  "description": "A middleware that enables to require request context.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pulasthibandara/global-request-context.git"
